customtests/tests/expected/exprdef1.err
tests/exprdef1.scala:12: error: mutability mismatch:
 found   : AnyRef @readonly(exprdef1.this.r1)
 required: AnyRef
	def ue4: AnyRef = r1  // should error
                          ^
tests/exprdef1.scala:15: error: mutability mismatch:
 found   : AnyRef @readonly(exprdef1.this.r1)
 required: AnyRef @mutable
	def me4: AnyRef @mutable = r1  // should error
                                   ^
two errors found
